<resources>
    <string name="app_name">88 Beans</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hayes_valley">Hayes Valley</string>
    <string name="blend">Blend</string>
    <string name="soe">Single Origin Espresso</string>
    <string name="decaf">Decaf</string>
    <string name="sod">Single Origin Drip</string>
    <string name="monday">Monday</string>
    <string name="cups_served_58">Cups Served: 58</string>
    <string name="weight_155">Weight: 155</string>
    <string name="Mon">Mon</string>
    <string name="Tues">Tues</string>
    <string name="Wed">Wed</string>
    <string name="Thur">Thur</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="textview">TextView</string>
    <string name="weight_output">Weight Output</string>
    <string name="weight">Weight:</string>
    <string name="cups">Cups sold:</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="name">Name</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="type_of_coffee">Type of Coffee</string>
    <string name="factor">Factor</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="week">This Week\'s Inputs</string>
    <string name="stats">Statistics</string>
    <string name="weekly">Week</string>
    <string name="Monthly">1 Month</string>
    <string name="sixMonths">6 Months</string>
    <string name="Yearly">Past Year</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="totalWeight">Week\'s total weight:</string>
    <string name="todo">TODO</string>
    <string name="graph">Graph</string>
    <string name="pastweek">Past Week</string>
    <string name="past2week">Past 2 Weeks</string>
    <string name="pastMonth">Past Month</string>
    <string name="allEntries">All Entries</string>
    <string name="entries">Entries</string>
    <string name="bi_weekly_data">Bi-Weekly Data</string>
    <string name="week_averages">Weekly Averages</string>
    <string name="add">Add</string>
    <string name="weekday_avg">Weekday Avg:</string>
    <string name="weekend_avg">Weekend Avg:</string>
</resources>
