<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/hayes_valley"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weekday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weekday_avg"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="6dp" />

            <TextView
                android:id="@+id/weekday_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/graph"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="6dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/weekend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/weekend_avg"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="6dp" />

            <TextView
                android:id="@+id/weekend_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/graph"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="6dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>