<?xml version="1.0" encoding="utf-8"?>
<android.support.design.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/home"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:adjustViewBounds="true"-->
        <!--android:contentDescription="@string/todo"-->
        <!--android:scaleType="centerCrop"-->
        <!--app:srcCompat="@drawable/sanfrancisco" />-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="70dp"
            android:orientation="horizontal"></android.support.v7.widget.RecyclerView>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/graphBackground"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/graphTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/graph"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@color/graphBackground"
                app:seriesType="line" />

        </LinearLayout>

        <!--<Button-->
        <!--android:id="@+id/button"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="300dp"-->
        <!---->
        <!--android:text="@string/button" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:onClick="weekOnClick"
                android:text="@string/weekly"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="monthOnClick"
                android:text="@string/Monthly"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="sixMonthOnClick"
                android:text="@string/sixMonths"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="pastYear"
                android:text="@string/Yearly"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/todo"
                android:onClick="previous"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/backarrow" />

            <!--<Button-->
            <!--android:id="@+id/previous"-->
            <!--style="@android:style/Widget.Material.Button.Colored"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:elevation="0dp"-->
            <!--android:onClick="previous"-->
            <!--android:text="@string/previous" />-->

            <TextView
                android:id="@+id/weekText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/week"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/todo"
                android:onClick="next"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/forwardarrow" />

            <!--<Button-->
            <!--android:id="@+id/next"-->
            <!--style="@style/Widget.AppCompat.Button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:elevation="0dp"-->
            <!--android:onClick="next"-->
            <!--android:text="@string/next"-->
            <!--android:textColor="@color/colorAccent" />-->
        </LinearLayout>


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/Week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:stretchColumns="7">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:text="@string/Mon"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:text="@string/Tues"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:text="@string/Wed"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:text="@string/Thur"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:text="@string/Fri"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_column="6"
                    android:layout_margin="0dp"
                    android:padding="5dp"
                    android:text="@string/Sat"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_column="7"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:text="@string/Sun"
                    android:textSize="20sp" />


            </TableRow>

            <TableRow
                android:layout_width="60dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/monOutput"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tuesOutput"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:textAlignment="viewStart"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/wedOutput"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_column="3"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/thurOutput"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_column="4"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/friOutput"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_column="5"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/satOutput"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_column="6"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/sunOutput"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_column="7"
                    android:layout_margin="1dp"
                    android:padding="5dp"
                    android:textSize="14sp" />


            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/totalWeight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/totalWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/allEntries"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:onClick="showEntries"
            android:text="@string/allEntries"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:textSize="18sp" />

        <!--<TextView-->
        <!--android:id="@+id/textView6"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:text="@string/stats"-->
        <!--android:textAlignment="center"-->
        <!--android:textSize="24sp" />-->


    </LinearLayout>
</android.support.design.circularreveal.CircularRevealRelativeLayout>


